syntax = "proto3";

package customer.service.api;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";


option go_package = "github.com/erknas/customer-service/pkg/api/customer";

service CustomerService {
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse) {
    option (google.api.http) = {
      post: "/api/v1/register"
      body: "*"
    };
  }
}

message Customer {
  string id = 1;
  string user_name = 2;
  string full_name = 3;
  string city = 4;
  string birth_date = 5;
  bool is_active = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateCustomerRequest {
  string user_name = 1 [(validate.rules).string = {
    min_len: 3,
    max_len: 50,
    pattern: "^[a-zA-Z0-9_]+$"
  }];

  string full_name = 2 [(validate.rules).string = {
    max_len: 100
  }];

  string city = 3 [(validate.rules).string = {
    max_len: 100
  }];

  string birth_date = 4 [(validate.rules).string = {
    min_len: 10,
    max_len: 10,
    pattern: "^[0-9]{4}-[0-9]{2}-[0-9]{2}$"
  }];
}

message CreateCustomerResponse {
  string id = 1;
  string user_name = 2;
  string full_name = 3;
  string city = 4;
  string birth_date = 5;
}